<resources>
    <string name="app_name">AppForTop</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="house_number">House Number</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="studentsList">Список студентов</string>
    <string name="addStudent">Добавить студента</string>
</resources>