<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/txtMiddleName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middle_name" />

    <TextView
        android:id="@+id/txtDateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_of_birth" />

    <TextView
        android:id="@+id/txtCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city" />

    <TextView
        android:id="@+id/txtStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street" />

    <TextView
        android:id="@+id/txtHouseNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house_number" />

    <TextView
        android:id="@+id/txtApartmentNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apartment_number" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <TextView
        android:id="@+id/txtPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number" />

</LinearLayout>
